@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro.conf.5.in,v 1.23 2007-10-12 17:08:31 chu11 Exp $
+\."$Id: cerebro.conf.5.in,v 1.24 2007-10-12 23:23:30 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -221,6 +221,37 @@ option is turned on.
 .TP
 .I cerebrod_event_server_port num
 Specify the event server port.  The default server port is 8853.
+.TP
+.I cerebrod_forward_message_config ip [destination_port source_port network_interface host1 host2 ...]
+Specify where cerebro messages received should be forwarded to and where they should
+be forwarded from.  This option can be listed multiple times to specify
+multiple forwarding destinations.  The ip address specifies the
+destination ip address that messages should be sent to.  It may be
+specified as a hostname, singlecast ip address, or multicast ip address.
+The default ip address is 239.2.11.72.  The destination port specifies
+the port that messages should be sent to.  The default destination
+port is 8850.  The source port specifies the port that messages should
+be sent from.  The default source port is 8849.  The network interface
+specifies the network interface messages should be sent out of.  This
+is typically used to specify a network when a multicast ip address is
+specified as the message destination.  The network interface can be
+specified as a network interface (i.e.  eth0), an ip address
+(i.e. 192.168.1.1) or a subnet using CIDR notation
+(i.e. 192.168.1.1/16).  By default, when a network interface is not
+specified,
+.B cerebrod 
+will search for and select an appropriate network interface. If the
+machine running 
+.B cerebrod 
+contains multiple network interfaces, it would be recommended that the
+appropriate network interface be configured.  Multiple hosts can be
+specified to indicate metric data from specific hosts in your cluster
+should be forwarded.  The hosts can be specified space separated,
+comma separated, or hostranged.  The destination_port, source_port,
+network_interfacem and hosts may be optionally specified.  To use
+defaults for the ip address or network interface, '0.0.0.0' may be
+specified.  To use defaults for destination_port or source_port a
+'0' may be specified.
 .if @MANPAGE_DEBUG@ \{
 .TP
 .I cerebrod_speak_debug ( on | off )
